add more keywords

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Jerome Lalunio programmer portfolio" />
-    <meta name="keywords" content="gwapong programmer">
+    <meta name="keywords"
+        content="gwapong programmer, jerome lalunio, jose jerome lalunio, full stack developer, app developer, web developer, jerome lalunio tech">
     <link rel="apple-touch-icon" href="./logo.png" />
     <link rel="manifest" href="./manifest.json" />
     <title>Jerome Lalunio</title>
