--- a/files/success.html
+++ b/files/success.html
@@ -1,1 +1,86 @@
-Success!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Payment Success</title>
+  </head>
+
+  <style>
+    * {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    }
+
+    .body {
+      text-align: center;
+    }
+
+    .success-text {
+      margin-top: 80px;
+      text-align: center;
+      font-size: 40px;
+      font-weight: bolder;
+      margin-bottom: 30px;
+    }
+
+    .svg-container {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+    }
+    .svg {
+      display: block;
+      height: 200px;
+      filter: invert(71%) sepia(26%) saturate(490%) hue-rotate(94deg)
+        brightness(83%) contrast(79%);
+    }
+  </style>
+  <body>
+    <div class="success-text">SUCCESS</div>
+    <div class="svg-container">
+      <svg
+        class="svg"
+        version="1.1"
+        id="Capa_1"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px"
+        y="0px"
+        viewBox="0 0 330 330"
+        style="enable-background: new 0 0 330 330"
+        xml:space="preserve"
+      >
+        <g>
+          <path
+            d="M165,0C74.019,0,0,74.019,0,165s74.019,165,165,165s165-74.019,165-165S255.981,0,165,0z M165,300
+		c-74.44,0-135-60.561-135-135S90.56,30,165,30s135,60.561,135,135S239.439,300,165,300z"
+          />
+          <path
+            d="M226.872,106.664l-84.854,84.853l-38.89-38.891c-5.857-5.857-15.355-5.858-21.213-0.001
+		c-5.858,5.858-5.858,15.355,0,21.213l49.496,49.498c2.813,2.813,6.628,4.394,10.606,4.394c0.001,0,0,0,0.001,0
+		c3.978,0,7.793-1.581,10.606-4.393l95.461-95.459c5.858-5.858,5.858-15.355,0-21.213
+		C242.227,100.807,232.73,100.806,226.872,106.664z"
+          />
+        </g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+      </svg>
+    </div>
+  </body>
+</html>
