--- a/files/mal_success.html
+++ b/files/mal_success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Authentication Success</title>
+    <title>Authorization completed</title>
   </head>
 
   <style>
@@ -39,7 +39,7 @@
     }
   </style>
   <body>
-    <div class="success-text">Authoriztion success!</div>
+    <div class="success-text">Authorization completed!</div>
     <div class="svg-container">
       <svg
         class="svg"
