--- a/files/mal_success.html
+++ b/files/mal_success.html
@@ -39,7 +39,7 @@
     }
   </style>
   <body>
-    <div class="success-text">Authorization completed!</div>
+    <div class="success-text">Authorization completed</div>
     <div class="svg-container">
       <svg
         class="svg"
